pointing to new sscs-common release and fixing checkstyle issues